# azure-uamqp-php

./: .env.conf  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  setup.sh
.github/workflows/: build-deb.yml  e2e.yml
docker/config/: service-bus-config.json
scripts/: emulator-parameters.php  generate-php-class-stubs.php  run-e2e.sh  test-consumer.php  test-producer.php  test-reflection-detailed.php  test_extension.php
